crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_subtype.txt
(expression/)
------------------ DIAGNOSTICS -------------------
error: expected a subtype after `/`
 --> query.ptk:1:13
  |
1 | (expression/)
  |             ^
  |
help: e.g., `expression#binary_expression`
